@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Fixed handling of PROJ_LIB value relative to mapfile path (#3094)
+
 - Fixed compilation error with opengl support (#3769)
 
 - add support for gml:Box for spatial filters (#3789)
